# aec-platform

./: .coverage  .editorconfig  .env.example  .gitignore  .pre-commit-config.yaml  .vercelignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  UX_AUDIT.md  docker-compose.yml  knip-baseline.json  knip.json  package.json  pnpm-lock.yaml  pyproject.toml  railway.json  railway.worker.json  security-advisories-baseline.json  test-runtime-baseline.json  ts-escapes-baseline.json  tsconfig.base.json  vercel.json
apps/api/: .coverage  .mutmut-config.toml  alembic.ini  main.py  pulse_smoke_app.py  pyproject.toml  requirements-dev.txt  requirements.txt
apps/api/alembic/: env.py
apps/api/alembic/versions/: 0001_core.py  (+82 more)
apps/api/core/: cache.py  config.py  envelope.py  llm_tracing.py  metrics.py  observability.py  rate_limit.py  storage.py  version.py
apps/api/db/: deps.py  session.py
apps/api/middleware/: api_key_auth.py  auth.py  idempotency_route.py  rbac.py  security_headers.py
apps/api/models/: __init__.py  api_keys.py  assistant.py  audit.py  audit_pins.py  bidradar.py  bondline.py  changeorder.py  codeguard.py  core.py  costpulse.py  cron_run.py  dailylog.py  drawbridge.py  einvoice.py  greenmark.py  handover.py  imports.py  nghiemthu.py  pccc.py  permitflow.py  pulse.py  punchlist.py  retention_overrides.py  schedulepilot.py  search.py  siteeye.py  slack_delivery.py  submittals.py  thanhtoan.py  webhooks.py  winwork.py  workforce.py
apps/api/routers/: activity.py  activity_stream.py  admin.py  api_keys.py  assistant.py  audit.py  bidradar.py  billing.py  bondline.py  cashflow.py  changeorder.py  codeguard.py  codeguard_quota.py  costpulse.py  cron_admin.py  dailylog.py  design_context.py  drawbridge.py  einvoice.py  equipment_rental.py  exports.py  files.py  greenmark.py  handover.py  imports.py  inbox.py  invitations.py  material_price_index.py  me.py  my_work.py  nghiemthu.py  notifications.py  onboarding.py  ops.py  org.py  orgs.py  pccc.py  permitflow.py  projects.py  public_rfq.py  (+16 more)
apps/api/schemas/: activity.py  admin.py  assistant.py  audit.py  bidradar.py  bondline.py  changeorder.py  codeguard.py  costpulse.py  dailylog.py  design_context.py  drawbridge.py  einvoice.py  greenmark.py  handover.py  inbox.py  invitations.py  nghiemthu.py  notifications.py  org.py  orgs.py  pccc.py  permitflow.py  projects.py  public_rfq.py  pulse.py  punchlist.py  schedulepilot.py  search.py  siteeye.py  slack_deliveries.py  submittals.py  thanhtoan.py  webhook_deliveries.py  webhooks.py  winwork.py  workforce.py
apps/api/scripts/: audit_baseline_drift.py  backfill_audit_actor_api_key.py  backfill_dailylog_from_siteeye.py  backfill_rfi_embeddings.py  generate_audit_index.py  seed_codeguard.py  seed_costpulse.py  seed_demo.py
apps/api/services/: _pdf_fonts.py  activity_stream.py  api_keys.py  assistant.py  assistant_tools.py  audit.py  audit_action_meta.py  audit_context.py  audit_diff.py  audit_export.py  audit_fingerprint.py  audit_pin_csv.py  audit_recipient.py  audit_resource_link.py  audit_rollup.py  audit_search.py  auth_header.py  auth_header_builder.py  backoff_combine.py  backoff_jitter.py  bidradar_jobs.py  billing.py  cache_control.py  canonical_query.py  canonical_slug.py  change_order_status.py  changeorder_schedule_rollup.py  codeguard_pdf.py  codeguard_quota_attribution.py  codeguard_quotas.py  cron_alert_dedup.py  cron_alerts.py  cron_preset.py  cron_stuck_rule.py  cron_telemetry.py  csv_export.py  currency_codes.py  dailylog_sync.py  date_range.py  design_context.py  (+90 more)
apps/api/tests/: conftest.py  openapi.snapshot.json  test_activity_router.py  test_activity_stream.py  test_activity_stream_contract_pin.py  test_admin_codeguard_bootstrap.py  test_admin_router.py  test_admin_routes_role_gate_audit.py  test_admin_session_factory.py  test_admin_session_factory_usage_audit.py  test_alembic_chain_integrity_audit.py  test_api_key_auth_contract_pin.py  test_api_keys.py  test_api_keys_project_picker_surface.py  test_api_keys_scopes_pin.py  test_api_keys_service_pin.py  test_apifetch_routes_match.py  test_app_import_smoke.py  test_arq_cron_schedules.py  test_assert_in_production_audit.py  test_assistant_cross_module.py  test_assistant_router.py  test_assistant_schemas_pin.py  test_assistant_streaming.py  test_assistant_tools.py  test_audit_action_callsite_audit.py  test_audit_action_literal_pin.py  test_audit_action_meta.py  test_audit_action_webhooks_in_sync.py  test_audit_completeness_audit.py  test_audit_context.py  test_audit_csv_export.py  test_audit_diff.py  test_audit_events_orm_shape_pin.py  test_audit_export.py  test_audit_fingerprint.py  test_audit_index_freshness_audit.py  test_audit_page_filters_in_sync.py  test_audit_pin_csv.py  test_audit_pins.py  (+305 more)
apps/api/workers/: codeguard_bootstrap.py  queue.py
apps/ml/: llm.py  pyproject.toml  requirements.txt  server.py
apps/ml/pipelines/: bidradar.py  changeorder.py  codeguard.py  codeguard_ingest.py  costpulse.py  dailylog.py  drawbridge.py  handover.py  pulse.py  rfi.py  schedulepilot.py  siteeye.py  winwork.py
apps/ml/scripts/: eval_harness.py
apps/ml/serve/: requirements.txt  siteeye_safety.py
apps/ml/tests/: conftest.py  test_codeguard_abstain.py  test_codeguard_as_of_date.py  test_codeguard_checklist_stream.py  test_codeguard_citation_grounding.py  test_codeguard_hybrid_search.py  test_codeguard_hyde_cache.py  test_codeguard_ingest_parser.py  test_codeguard_latency_budget.py  test_codeguard_quality_eval.py  test_codeguard_query_pipeline_integration.py  test_codeguard_query_stream.py  test_codeguard_quotas_cli.py  test_codeguard_retrieval_integration.py  test_codeguard_scan_pipeline_integration.py  test_codeguard_scan_stream.py  test_codeguard_spend_report.py  test_codeguard_telemetry.py  test_dailylog_patterns.py  test_eval_harness.py  test_pulse_client_report.py  test_schedulepilot_cpm.py  test_siteeye_dailylog_sync.py  test_weekly_report_boq_attach.py  test_winwork_orchestration.py  test_winwork_pipeline_nodes.py  test_winwork_pipeline_pure.py
apps/ml/training/: train_win_classifier.py
(+650 files in other folders)
