[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aec-api"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's parameter-default DI (`arg = Depends(...)`, `arg = Query(...)`)
# is the framework idiom, not a B008 violation.
extend-immutable-calls = [
  "Depends", "fastapi.Depends",
  "Query",   "fastapi.Query",
  "Path",    "fastapi.Path",
  "Body",    "fastapi.Body",
  "Header",  "fastapi.Header",
  "Cookie",  "fastapi.Cookie",
  "File",    "fastapi.File",
  "Form",    "fastapi.Form",
  "Security","fastapi.Security",
]

[tool.ruff.lint.per-file-ignores]
# `models/pulse.py` defines a timezone-aware DateTime alias *between*
# imports so each Mapped[datetime] column reads naturally.
"models/pulse.py" = ["E402"]
# Test files use B011 `assert False` and E731 lambda assignments freely.
# E402: section-grouped tests deliberately put `from services... import`
# blocks inline with their explanatory comments rather than at the top.
"tests/**" = ["B011", "E731", "E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires live infra (Postgres / Redis / OpenAI). Skipped by default; pass --integration to opt in.",
]
