[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aec-api"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's parameter-default DI (`arg = Depends(...)`, `arg = Query(...)`)
# is the framework idiom, not a B008 violation.
extend-immutable-calls = [
  "Depends", "fastapi.Depends",
  "Query",   "fastapi.Query",
  "Path",    "fastapi.Path",
  "Body",    "fastapi.Body",
  "Header",  "fastapi.Header",
  "Cookie",  "fastapi.Cookie",
  "File",    "fastapi.File",
  "Form",    "fastapi.Form",
  "Security","fastapi.Security",
]

[tool.ruff.lint.per-file-ignores]
# `models/pulse.py` defines a timezone-aware DateTime alias *between*
# imports so each Mapped[datetime] column reads naturally.
"models/pulse.py" = ["E402"]
# Test files use B011 `assert False` and E731 lambda assignments freely.
# E402: section-grouped tests deliberately put `from services... import`
# blocks inline with their explanatory comments rather than at the top.
"tests/**" = ["B011", "E731", "E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Lock async fixture loop scope to the test function. Without this,
# pytest-asyncio's default ("inherit cache scope") changes between minor
# versions, and a session-scoped DB fixture sharing one event loop with
# function-scoped tests is the classic source of "Future attached to a
# different loop" / "Event loop is closed" flakes — exactly what bit the
# siteeye/drawbridge/costpulse queue tests in this codebase's history.
# Per-function loop = no cross-test loop reuse, no flake.
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: requires live infra (Postgres / Redis / OpenAI). Skipped by default; pass --integration to opt in.",
]
filterwarnings = [
    # langsmith (transitive langchain dep) calls `pydantic.v1` ForwardRef
    # machinery at class-definition time, which triggers a Python 3.13
    # DeprecationWarning about `type_params` from `typing.ForwardRef._evaluate`.
    # Not our code, can't fix here, fires 16× per pytest run otherwise. Scope
    # the silence to the exact module so genuine deprecations elsewhere stay
    # visible.
    "ignore::DeprecationWarning:pydantic.v1.typing",
]
