[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aec-api"
version = "0.1.0"
requires-python = ">=3.11"

[tool.ruff]
line-length = 120
target-version = "py311"
extend-exclude = ["alembic/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["E501"]

[tool.ruff.lint.flake8-bugbear]
# FastAPI's parameter-default DI (`arg = Depends(...)`, `arg = Query(...)`)
# is the framework idiom, not a B008 violation.
extend-immutable-calls = [
  "Depends", "fastapi.Depends",
  "Query",   "fastapi.Query",
  "Path",    "fastapi.Path",
  "Body",    "fastapi.Body",
  "Header",  "fastapi.Header",
  "Cookie",  "fastapi.Cookie",
  "File",    "fastapi.File",
  "Form",    "fastapi.Form",
  "Security","fastapi.Security",
]

[tool.ruff.lint.per-file-ignores]
# `models/pulse.py` defines a timezone-aware DateTime alias *between*
# imports so each Mapped[datetime] column reads naturally.
"models/pulse.py" = ["E402"]
# Test files use B011 `assert False` and E731 lambda assignments freely.
# E402: section-grouped tests deliberately put `from services... import`
# blocks inline with their explanatory comments rather than at the top.
"tests/**" = ["B011", "E731", "E402"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
# Lock async fixture loop scope to the test function. Without this,
# pytest-asyncio's default ("inherit cache scope") changes between minor
# versions, and a session-scoped DB fixture sharing one event loop with
# function-scoped tests is the classic source of "Future attached to a
# different loop" / "Event loop is closed" flakes — exactly what bit the
# siteeye/drawbridge/costpulse queue tests in this codebase's history.
# Per-function loop = no cross-test loop reuse, no flake.
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
markers = [
    "integration: requires live infra (Postgres / Redis / OpenAI). Skipped by default; pass --integration to opt in.",
    "real_rate_limit: opt out of the autouse rate-limiter bypass in conftest.py. Use for tests that exercise `core.rate_limit._acquire` directly.",
]
filterwarnings = [
    # langsmith (transitive langchain dep) calls `pydantic.v1` ForwardRef
    # machinery at class-definition time, which triggers a Python 3.13
    # DeprecationWarning about `type_params` from `typing.ForwardRef._evaluate`.
    # Not our code, can't fix here, fires 16× per pytest run otherwise. Scope
    # the silence to the exact module so genuine deprecations elsewhere stay
    # visible.
    "ignore::DeprecationWarning:pydantic.v1.typing",
]

# ---------- Coverage ----------
#
# `pytest --cov` opts coverage on; this section pins HOW it measures.
# Default plain `pytest -q` doesn't run with coverage (would inflate the
# unit-test loop). Run via `make test-api-cov` or pass `--cov` explicitly.
#
# Branch coverage is on because line-only misses important things like
# "this `if status == 'won'` branch is never taken in tests."

[tool.coverage.run]
branch = true
source = [
    "core",
    "db",
    "middleware",
    "models",
    "routers",
    "schemas",
    "services",
    "workers",
]
# Excluded: code that's exercised by the integration lane only (we don't
# want the unit-lane coverage report to mark these as 0%) and bootstrap
# code that isn't meaningfully testable.
omit = [
    "*/__init__.py",
    "*/conftest.py",
    "tests/*",
    "main.py",
    "alembic/*",
]

[tool.coverage.report]
# Drop trivially-empty lines from the missing-coverage report — these are
# already-tested by the runtime (Python won't let you have a half-defined
# class) and would just clutter the output.
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
show_missing = true
skip_covered = true
# Coverage floor — a PR that drops the global average below 80% red-gates
# in CI. Baseline as of 2026-05-01: 80% (over 662 tests). When you raise
# this, raise it by what you actually achieve, not what you aspire to —
# an aspirational floor that's never met just trains people to ignore it.
fail_under = 80
